# image_processor

./: CMakeLists.txt  LICENSE  README.md  filter_factory.cpp  filter_factory.h  helper.cpp  helper.h  image.cpp  image.h  image_processor.cpp  parser_cmd.cpp  parser_cmd.h
filters/: base_filter.h  crop_filter.cpp  crop_filter.h  edge_detection_filter.cpp  edge_detection_filter.h  gaussian_blur_filter.cpp  gaussian_blur_filter.h  grayscale_filter.cpp  grayscale_filter.h  matrix_for_filters.h  negative_filter.cpp  negative_filter.h  pixelate_filter.cpp  pixelate_filter.h  sharpening_filter.cpp  sharpening_filter.h
tests/: test_filters.cpp  test_image.cpp  test_parser.cpp
